# University

./: .gitignore  LICENSE  README.md
cpp/backtracking_algorithm/: CMakeLists.txt  main.cpp
cpp/first_last_search/: CMakeLists.txt  main.cpp
cpp/huffman_algorithm/: CMakeLists.txt  main.cpp
cpp/interpolation_searching/: CMakeLists.txt  i_search_drive.cpp
cpp/kadane_algorithm/: CMakeLists.txt  main.cpp
cpp/knapstack_problem/: CMakeLists.txt  dynamic_programming_approach.cpp  recursive_approach.cpp
cpp/libs/backpack/: backpack_problem.cpp  backpack_problem.tcc  subject.tcc
cpp/libs/backtracking/: knapsack.cpp  knapsack.h
cpp/libs/c_array/: c_array.h  c_sort_array.h
cpp/libs/exceptions/: exceptions.cpp  exceptions.h
cpp/libs/generators/: generators.tcc
cpp/libs/graphs/: List.cpp  List.h  auxiliary.cpp  auxiliary.h
cpp/libs/huffman/: huffman.tcc  node.tcc
cpp/libs/input_sanitization/: input_sanitization.cpp  input_sanitization.h  input_sanitization.tcc
cpp/libs/interpolation_searching/: awesome_cut_library.cpp  awesome_cut_library.h  awesome_cut_library.tcc
cpp/libs/pseudo_code_impl/: set_manipulation.cpp  set_manipulation.h
cpp/libs/recursion/: recursion_and_merge.cpp  recursion_and_merge.h
cpp/libs/searching/: searching.cpp  searching.h
cpp/libs/stack_and_rpn/: RPN.cpp  RPN.h  Stack.tcc
cpp/libs/stack_size/: stack_size.cpp  stack_size.h
cpp/pseudo_code_implementation/: 0x1.cpp  0x2.cpp  0x3.cpp  CMakeLists.txt
cpp/pseudo_random_number_generators/: CMakeLists.txt  generators_drive.cpp
cpp/reading_graphs/: CMakeLists.txt  reading_directed_graph.cpp  reading_non-directed_graph.cpp  reading_non_directed_graph.cpp
cpp/recursion_and_inversion/: CMakeLists.txt  inversion.cpp  recursion.cpp
cpp/sort_algorithms/: CMakeLists.txt  main.cpp
cpp/stack_and_rpn/: CMakeLists.txt  rpn_drive.cpp  stack_drive.cpp
